--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,6 +7,11 @@ color_scheme: dark
 search_enabled: true
 heading_anchors: true
 
+# Layout settings
+max_width: 100% # Make content full width
+nav_width: 264px # Fixed sidebar width
+search_max_width: 640px # Limit search width for better readability
+
 # Aux links for the upper right navigation
 aux_links:
   "Join Discord":
@@ -37,4 +42,25 @@ collections:
     output: true
   guides:
     permalink: "/:collection/:path/"
-    output: true 
+    output: true
+
+# Navigation structure
+nav_external_links:
+  - title: Dokapon on Steam
+    url: https://store.steampowered.com/app/2309320/DOKAPON_Sword_of_Fury/
+    hide_icon: false
+
+# Enable copy code button
+enable_copy_code_button: true
+
+# Callout settings
+callouts:
+  warning:
+    title: Warning
+    color: red
+  note:
+    title: Note
+    color: blue
+  tip:
+    title: Tip
+    color: green 
