Update documentation configuration for DOKAPON! Sword of Fury. Changed theme to remote_theme for better customization and added necessary plugins for enhanced functionality. Removed direct reference to 'just-the-docs' gem in Gemfile to streamline dependencies.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Dokapon SoF Documentation
 description: Documentation for Dokapon SoF project
-theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 
 url: https://dinasor.github.io
 baseurl: /dokaponsof
@@ -68,6 +68,7 @@ plugins:
   - jekyll-github-metadata
   - jekyll-include-cache
   - jekyll-sitemap
+  - jekyll-remote-theme
 
 kramdown:
   syntax_highlighter_opts:
