Update color scheme in _config.yml to dark mode for improved visual accessibility in DOKAPON! Sword of Fury documentation.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ baseurl: /dokaponsof
 search_enabled: true
 
 # Color scheme supports "light" (default) and "dark"
-color_scheme: light
+color_scheme: dark
 
 # Aux links for the upper right navigation
 aux_links:
