--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -34,6 +34,8 @@ color_scheme: dark
 aux_links:
   "View on GitHub":
     - "https://github.com/dinasor/dokaponsof"
+  "Join Discord":
+    - "https://discord.gg/HCrYwScDg5"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
@@ -47,7 +49,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 
 # Footer content
 # appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2024 Dokapon SoF. Licensed under GNU General Public License v3.0 (GPL-3.0)."
+footer_content: "Copyright &copy; 2024 Dokapon SoF. Licensed under GNU General Public License v3.0 (GPL-3.0). DOKAPON! Sword of Fury is developed by <a href='https://www.sting.co.jp/'>Sting Entertainment</a>."
 
 # Back to top link
 back_to_top: true
