--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -49,7 +49,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 
 # Footer content
 # appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2024 Dokapon SoF. Licensed under GNU General Public License v3.0 (GPL-3.0). DOKAPON! Sword of Fury is developed by <a href='https://www.sting.co.jp/'>Sting Entertainment</a>."
+footer_content: "Copyright &copy; 2024 Dokapon SoF. Licensed under The Unlicense. DOKAPON! Sword of Fury is developed by <a href='https://www.sting.co.jp/'>Sting Entertainment</a>."
 
 # Back to top link
 back_to_top: true
