--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,10 @@ search_enabled: true
 # Color scheme supports "light" (default) and "dark"
 color_scheme: dark
 
-# Aux links for the upper right navigation
+# Disable default sidebar navigation (using custom top nav)
+nav_enabled: false
+
+# Aux links (kept for reference, now in custom top nav)
 aux_links:
   "View on GitHub":
     - "https://github.com/dinasor/dokaponsof"
@@ -49,7 +52,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 
 # Footer content
 # appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2024 Dokapon SoF. Licensed under The Unlicense. DOKAPON! Sword of Fury is developed by <a href='https://www.sting.co.jp/'>Sting Entertainment</a>."
+footer_content: "Copyright &copy; 2024-2025 Dokapon SoF. Licensed under The Unlicense. DOKAPON! Sword of Fury is developed by <a href='https://www.sting.co.jp/'>Sting Entertainment</a>."
 
 # Back to top link
 back_to_top: true
