--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,10 +30,7 @@ search_enabled: true
 # Color scheme supports "light" (default) and "dark"
 color_scheme: dark
 
-# Disable default sidebar navigation (using custom top nav)
-nav_enabled: false
-
-# Aux links (kept for reference, now in custom top nav)
+# Aux links for the upper right navigation
 aux_links:
   "View on GitHub":
     - "https://github.com/dinasor/dokaponsof"
