--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,17 +1,17 @@
 source "https://rubygems.org"
 
-gem "jekyll", "~> 3.9"
+gem "github-pages", group: :jekyll_plugins
 
 group :jekyll_plugins do
   gem "jekyll-remote-theme"
   gem "jekyll-seo-tag"
   gem "jekyll-sitemap"
   gem "jekyll-include-cache"
-  gem "jekyll-github-metadata"
-  gem "jekyll-feed"
 end
 
-gem "webrick", "~> 1.7"
-gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+gem "base64"
+gem "csv"
+
+gem "jekyll-github-metadata", ">= 2.15"
 
 gem "html-proofer", "~> 5.0", :group => :development
